# optimum-slice

./: fourmolu.yaml  optimum-slice.cabal  shell.nix
exe/: Main.hs
src/: OptimumSlice.hs
test/: Test.hs
